making progress on curl, get the response string

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -4,6 +4,8 @@ add_definitions(-std=c++11)
 
 #Directories
 include_directories("${PROJECT_BINARY_DIR}")
+include_directories("/usr/lib/x86_64-linux-gnu/")
+include_directories("/usr/local/include/")
 
 #source files
 #set(SOURCES confreak.m.cpp) #Manually include the source file
@@ -12,3 +14,6 @@ file(GLOB SOURCES "./*.cpp")
 
 #executable
 add_executable(confreak.tsk  ${SOURCES})
+
+#Adding LIBS
+target_link_libraries(confreak.tsk curl)
