working on json conversion

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -5,15 +5,15 @@ add_definitions(-std=c++11)
 #Directories
 include_directories("${PROJECT_BINARY_DIR}")
 include_directories("/usr/lib/x86_64-linux-gnu/")
-include_directories("/usr/local/include/")
+#include_directories("/home/s/workspace/cpp/SimpleJSON/src/")
 
 #source files
 #set(SOURCES confreak.m.cpp) #Manually include the source file
-file(GLOB SOURCES "./*.cpp")
-#file(GLOB HEADERS "./*.h")
+file(GLOB SOURCES "./*.cpp" "/home/s/workspace/cpp/SimpleJSON/src/*.cpp" )
+#file(GLOB HEADER "/home/s/workspace/cpp/SimpleJSON/src/*.cpp")
 
 #executable
-add_executable(confreak.tsk  ${SOURCES})
+add_executable(confreak.tsk  ${SOURCES}  )
 
 #Adding LIBS
 target_link_libraries(confreak.tsk curl)
