1st commit from rx480 linux, with datatype almost all ready

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -5,12 +5,12 @@ add_definitions(-std=c++11)
 #Directories
 include_directories("${PROJECT_BINARY_DIR}")
 include_directories("/usr/lib/x86_64-linux-gnu/")
+include_directories("${PROJECT_BINARY_DIR}/deps")
 #include_directories("/home/s/workspace/cpp/SimpleJSON/src/")
 
 #source files
 #set(SOURCES confreak.m.cpp) #Manually include the source file
-file(GLOB SOURCES "./*.cpp" "/home/s/workspace/cpp/SimpleJSON/src/*.cpp" )
-#file(GLOB HEADER "/home/s/workspace/cpp/SimpleJSON/src/*.cpp")
+file(GLOB SOURCES "./*.cpp" "deps/*.cpp" )
 
 #executable
 add_executable(confreak.tsk  ${SOURCES}  )
