--- a/cpp/confreak.cfg
+++ b/cpp/confreak.cfg
@@ -4,4 +4,8 @@ password=111111
 
 [COMM]
 baseurl=http://localhost:8000/
-serial=/dev/ttyACM1
+serial=/dev/ttyACM0
+
+[APPS]
+monitorapp=1
+controlapp=0
