--- a/cpp/confreak.cfg
+++ b/cpp/confreak.cfg
@@ -5,6 +5,8 @@ password=111111
 [COMM]
 baseurl=http://localhost:8000/
 serial=/dev/ttyACM0
+//Framerate unit: seconds
+framerate=2
 
 [APPS]
 monitorapp=1
