both monitor and control workflow achieved, system works well at 0.5FSP, UI checkbutton sometimes will stop working, F5 can resolve it. overall it's pretty awesome

--- a/cpp/confreak.cfg
+++ b/cpp/confreak.cfg
@@ -4,9 +4,9 @@ password=111111
 
 [COMM]
 baseurl=http://localhost:8000/
-serial=/dev/ttyACM0
-//Framerate unit: seconds
-framerate=2
+serial=/dev/ttyACM1
+//Framerate unit: microseconds, recommanded 2 secs
+framerate=2000000
 
 [APPS]
 monitorapp=1
